# WeConnect-SolarManager

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: FUNDING.yml
docker/: .env  Dockerfile  docker-compose.yml
service/: SolarManager.service  readme.md
src/: Helper.py  app.py  config.txt  init.py  main.py
src/Data/: SolarEdge.json  Sonnen.json
src/GeoLocationManager/: GeoLocationManager.py
src/SolarEdge/: SolarEdge.py
src/SolarManager/: SolarManager.py
src/SolarManager/Elements/: enums.py
src/Sonnen/: Sonnen.py
src/WebApp/: app.py
src/WebApp/static/: pushNotification.js  serviceWorker.js
src/WebApp/templates/: index.html
src/static/: default.css  manifest.json  pushNotification.js  serviceWorker.js
src/templates/: index.html
