[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WeConnect-SolarManager"
version = "0.2.0"
authors = [
  { name="Thomas Werner", email="thomas.werner@witro.ch" },
]
description = "With WeConnect-SolarManager you can automatically charge your Volkswagen ID car (e.g. ID.4) with solar electricity, even if your wallbox does not support this."
readme = "readme.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wene37/WeConnect-SolarManager"
"Bug Tracker" = "https://github.com/wene37/WeConnect-SolarManager/issues"
